Fixed orders to work properly with stateParams and collapsed into single controller and removed extra templates

--- a/plugins/glidera/less/app.less
+++ b/plugins/glidera/less/app.less
@@ -131,7 +131,7 @@ body {
     margin-top: 20px;
     margin-bottom: 40px;
 
-    &.btn-group {
+    .btn-group {
 
       .btn.active {
         background: none;
